# Hack_aton

./: Part1.SLDPRT  Приложение Б. CAD-модель магнитного колеса.SLDASM  Приложение Б. CAD-модель магнитного колеса.STEP  Спецификация.xlsx
SurveilMaster-4 Algorithm/: CMakeLists.txt  package.txt
SurveilMaster-4 Algorithm/launch/: robot_lauch(py).txt
SurveilMaster-4 Algorithm/src/: camera_node(cpp).txt  lidar_node(cpp).txt  ultra_sonic(cpp).txt
